⚗️ test: Testa conexao com banco de dados, criacao de migration e tabela. Este teste foi feito com containers de docker compose separados

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,4 @@
 services:
-  mysql_delphiapi_coupled:
-    image: mysql:8.0.30-debian
-    container_name: mysql_delphiapi_coupled
-    restart: always
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=delphi_api
-
-    ports:
-      - 3306:3306
-    volumes:
-      - ./data:/var/lib/mysql
-
   api_for_delphi:
     container_name: api_for_delphi
     build: .
@@ -20,5 +7,9 @@ services:
       - 4000:3000
     volumes:
       - .:/home/node/api
-    depends_on:
-      - mysql_delphiapi_coupled
+    networks:
+      - nt-delphi
+
+networks:
+  nt-delphi:
+    external: true
