--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,24 @@
 # DATABASE
 DB_HOST=
 DB_PORT=3306
-DB_NAME=
+DB_NAME=delphi_api
 DB_USER=
 DB_PASS=
+
+DB_WEB_HOST=
+DB_WEB_PORT=3306
+DB_WEB_NAME=dbase_web
+DB_WEB_USER=
+DB_WEB_PASS=
+
+DB_ECOMMERCE_HOST=
+DB_ECOMMERCE_PORT=3306
+DB_ECOMMERCE_NAME=dbase_ecommerce
+DB_ECOMMERCE_USER=
+DB_ECOMMERCE_PASS=
+
+DB_DASHBOARD_HOST=
+DB_DASHBOARD_PORT=3306
+DB_DASHBOARD_NAME=dbase_dashboard
+DB_DASHBOARD_USER=
+DB_DASHBOARD_PASS=
