♻️ ✨ feat: Adiciona e completa com sucesso conexao com 3 bancos de dados distintos (web-presale, e-commerce, dashboard)

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,9 @@
 # DATABASE
-DB_HOST=
-DB_PORT=3306
-DB_NAME=delphi_api
-DB_USER=
-DB_PASS=
+DB_ERP_HOST=
+DB_ERP_PORT=3306
+DB_ERP_NAME=delphi_api
+DB_ERP_USER=
+DB_ERP_PASS=
 
 DB_WEB_HOST=
 DB_WEB_PORT=3306
