--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,10 @@
     "paths": {
       "@src/*": ["./src/*"],
       "@server/*": ["./src/server/*"],
-      "@Repositories/*": ["./src/infra/database/repositories/*"],
+      "@Database/*": ["src/infra/database/*"],
       "@ApProductModule/*": ["./src/modules/ap-products/*"],
-      "@ApSettingModule/*": ["./src/modules/ap-settings/*"]
+      "@ApSettingModule/*": ["./src/modules/ap-settings/*"],
+      "@EcGroupModule/*": ["./src/modules/ec-groups/*"]
     },
 
     "incremental": true,
