--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "paths": {
       "@src/*": ["./src/*"],
       "@server/*": ["./src/server/*"],
-      "@Repositories/*": ["./src/infra/database/repositories/*"],
+      "@Database/*": ["src/infra/database/*"],
       "@ApProductModule/*": ["./src/modules/ap-products/*"],
       "@ApSettingModule/*": ["./src/modules/ap-settings/*"],
       "@EcGroupModule/*": ["./src/modules/ec-groups/*"]
