--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,3 +15,5 @@ services:
       - .:/home/node/api
     networks:
       - delphi-network
+    # extra_hosts:
+    #   - 'host.docker.internal:172.17.0.1'
